--- a/public/index.html
+++ b/public/index.html
@@ -10,21 +10,27 @@
 
 <body>
     <h1>My app</h1>
-    <form id="sign_in" action="#">
-        <div class="row">
+    <div id="signed_out">
+        <form id="sign_in" action="#">
+            <div class="row">
 
 
-            <div class="col">
+                <div class="col">
 
 
-                <input id="email_signup" type="email" name="email" placeholder="Email" required>
-                <input id="password_signup" type="password" name="password" placeholder="Password" required>
-                <input type="submit" value="Login">
+                    <input id="email_signup" type="email" name="email" placeholder="Email" required>
+                    <input id="password_signup" type="password" name="password" placeholder="Password" required>
+                    <input type="submit" value="Login">
+                </div>
+
             </div>
+        </form>
+    </div>
 
-        </div>
-    </form>
-    <button id="logout">Logout</button>
+    <div id="signed_in">
+        <ul id="posts"></ul>
+        <button id="logout">Logout</button>
+    </div>
     <script src="script.js">
     </script>
 </body>
